# swift_atomics_test

./: .gitignore  BUILD.bazel  Package.swift  WORKSPACE  swift_deps.bzl  swift_deps_index.json
Sources/Atomics/: AtomicBool.swift  AtomicInteger.swift  AtomicMemoryOrderings.swift  AtomicValue.swift  BUILD.bazel  HighLevelTypes.swift  Primitives.shims.swift
Sources/SwiftAtomics/: BUILD.overlay
Sources/SwiftAtomicsTest/: AtomicBool.swift  AtomicValue.swift  BUILD.bazel  SwiftAtomicsTestMain.swift
Sources/_AtomicsShims/: BUILD.bazel
Tests/: Atomics.output_file_map.json  BazelBuildCommands.sh  PathChangedBazelBuildCommands.sh  SwiftAtomicsTest-2.params  SwiftAtomicsTest.output_file_map.json  original_bazel_build_commands.sh  path_changed_bazel_build_commands.sh
shell-bazel/: Atomics.output_file_map.json  FixBazelSegfaultOpt.sh  ReproduceBazelSegfaultDebug.sh  ReproduceBazelSegfaultOpt.sh  SwiftAtomicsTest.output_file_map.json
shell-swift/: Atomics.output_file_map.json  ReproduceSwiftSuccess.sh  ReproduceSwiftSuccessRelease.sh  SwiftAtomicsTest.output_file_map.json
