load("@build_bazel_rules_swift//swift:swift.bzl", "swift_binary")

swift_binary(
    name = "SwiftAtomicsTest",
    srcs = ["SwiftAtomicsTestMain.swift"],
    module_name = "SwiftAtomicsTest",
    visibility = ["//visibility:public"],
    deps = [
        "@swiftpkg_swift_atomics//:Sources_Atomics",
    ],
)
